Ensure the service dashboard layout works properly on mobile (CO-1438)

--- a/app/webroot/css/co-base.css
+++ b/app/webroot/css/co-base.css
@@ -1321,25 +1321,20 @@ a#top-search-toggle:hover {
   border-bottom: 1px solid #07b;
 }
 .co-card img {
-  float: right;
-  min-width: 50%;
-  max-width: 50%;
-  margin: 0 0 0.5em 0.5em;
+  min-width: 100%;
+  max-width: 100%;
+  margin: 1em 0;
 }
 #content .co-card .co-card-icons .material-icons {
   font-size: 2em;
   margin-right: 4px;
 }
 .co-card .co-card-icons {
-  position: absolute;
-  bottom: 1em;
-  right: 1em;
-  margin-top: 0.75em;
+  float: right;
+  margin-top: 1em;
 }
 .co-card-join-button {
-  position: absolute;
-  bottom: 1em;
-  left: 1em;
+  margin-top: 1em;
 }
 .co-card ul {
   padding: 0;
